[package]
name = "ccex"
version = "0.1.0"
authors = ["Terry Brashaw <terrybrashaw@gmail.com>"]

[dependencies]
base64 = "^0.9.0"
chrono = {version = "^0.4.0", features = ["serde"]}
failure = {version = "^0.1.1"}
hex = "^0.3.1"
hmac = "^0.5.0"
http = "^0.1.5"
num-traits = "^0.2.2"
reqwest = "^0.8.5"
rust_decimal = "^0.7.2"
serde = "^1.0.34"
serde_derive = "^1.0.34"
serde_json = "^1.0.13"
sha2 = "^0.7.0"
url = "^1.7.0"
