[package]
name = "ni_ce"
version = "0.1.0"
license = "MIT"
documentation = "https://docs.rs/ni_ce"
repository = "https://github.com/terrybrashaw/ni_ce"
description = "Some nice cryptocurrency exchange API bindings."
authors = ["Terry Brashaw <terrybrashaw@gmail.com>"]
keywords = ["cryptocurrency", "exchange", "trading"]
categories = ["api-bindings"]
readme = "README.md"

[dependencies]
base64 = "0.9.0"
chrono = {version = "0.4.2", features = ["serde"]}
failure = "0.1.1"
hex = "0.3.1"
hmac = "0.5.0"
http = "0.1.5"
num-traits = "0.2.2"
reqwest = "0.8.5"
rust_decimal = "0.8.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.7.0"
url = "1.7"
